--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 /*
 Theme Name: Ifes
 Theme URI: www.ifes.edu.br
-Github Theme URI: https://github.com/levimoon/Ifes_Wordpress
-Version: v1.7
+Version: 1.6
 Description: Template para Wordpress de modelo do Ifes. Foi alterada a logo do Ifes, em concordância ao novo manual da marca enviado pela Setec. Também foi corrigido um problema na listagem dos posts, em que não aparecia o último post criado. Corrigido também um problema que fazia com que mais de uma página computasse visita quando clicado na listagem.
 Author: CSO - Reitoria
 Author URI:
@@ -1418,6 +1417,10 @@ div#menu-eventos-ci.tit_menu_eventos h4{
 	width:928px;
 	margin:0px auto;
 	font-family:Arial, Helvetica, sans-serif;
+	font-size:11px;
+	color:#888B80;
+}
+al, Helvetica, sans-serif;
 	font-size:11px;
 	color:#888B80;
 }
