mudança no estilo

--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 /*
 Theme Name: Ifes
 Theme URI: www.ifes.edu.br
-Version: 1.6
+Github Theme URI: https://github.com/levimoon/Ifes_Wordpress
+Version: v1.9.1
 Description: Template para Wordpress de modelo do Ifes. Foi alterada a logo do Ifes, em concordância ao novo manual da marca enviado pela Setec. Também foi corrigido um problema na listagem dos posts, em que não aparecia o último post criado. Corrigido também um problema que fazia com que mais de uma página computasse visita quando clicado na listagem.
 Author: CSO - Reitoria
 Author URI:
